Fixed some build errors, and added Slayer Masters/Point Streaks/etc.
Next will be fixing slayer master interactions and adding the rewards tab.